fix logo alignment

--- a/src/scss/site-header/_site-header-standard.scss
+++ b/src/scss/site-header/_site-header-standard.scss
@@ -1,6 +1,7 @@
 #site-header-logonav-container {
 	@include media-breakpoint-up(lg) {
 		display: flex;
+		align-items: center;
 		flex-direction: row;
 		justify-content: space-between;
 	}
